--- a/css/main.css
+++ b/css/main.css
@@ -311,3 +311,83 @@ a {
   margin-top: 25px;
   display: flex;
 }
+.side-container {
+  width: 360px;
+  height: 640px;
+  background-color: #303030;
+  margin: auto;
+  display: flex;
+}
+.side-drawer {
+  width: 304px;
+  height: 592px;
+  background-color: #ffffff;
+}
+.side-wall {
+  width: 56px;
+  height: 592px;
+}
+.close {
+  width: 24px;
+  height: 24px;
+  background-image: url(../img/close.png);
+  background-repeat: no-repeat;
+  margin-left: 20px;
+  margin-top: 30px;
+}
+.pattern {
+  width: 304px;
+  height: 200px;
+  background-image: url(../img/pattern.png);
+  display: flex;
+}
+.group {
+  width: 264px;
+  height: 122px;
+  margin-top: 50px;
+}
+.avatar {
+  width: 80px;
+  height: 80px;
+  background-image: url(../img/avatar.png);
+  margin-left: 115px;
+}
+.avatar-text {
+  width: 264px;
+  height: 24px;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+  margin-left: 27px;
+  margin-top: 18px;
+}
+.list {
+  width: 164px;
+  height: 313px;
+  display: flex;
+}
+ul {
+  list-style: none;
+}
+li {
+  margin-bottom: 17px;
+  margin-top: 27px;
+}
+li > a {
+  color: #000000;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 22px;
+  text-align: left;
+}
+.android-menu-side {
+    width: 360px;
+    height: 48px;
+    background-color: #000000;
+    margin-top: 25px;
+    display: flex;
+    margin: auto;
+  }
