--- a/css/detail.css
+++ b/css/detail.css
@@ -1,8 +1,8 @@
 .main-info-details{
   width:360px;
-  height: 930px ;
   background-color: #303030;
   margin: 0 auto;
+  padding-bottom: 20px;
 }
 
 .img-detail{
@@ -38,9 +38,6 @@
   padding-left: 10px;
   padding-right: 10px;
 }
-.hosts{
-  height: 300px;
-}
 h1{
   font-size: 18px
 }
@@ -61,4 +58,40 @@ h1{
   height: 42px;
   background-color: #39784E;
   color: white;
+}
+
+.img-user{
+  width: 40px;
+  height: 40px;
+  padding-left: 10px;
+}
+.comments-card{
+  background-color: #757575;
+  margin-left: 10px;
+  margin-right: 15px;
+  border-radius: 0px 15px 15px 15px;
+
+}
+.card-container{
+  display: flex;
+  padding-top: 10px;
+}
+.text-comment{
+  padding-left: 10px;
+  padding-right: 10px;
+  color: white;
+}
+.container-reviews{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.title-news{
+  display: inline-block;
+  padding-left: 20px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding-right: 10px;
+  position: relative;
+  top: 13px
 }
